# bpx_sdk_open

./: .gitattributes  CHANGELOG.md  CHANGELOG.zh-CN.md  CMakeLists.txt  README.md  README.zh-CN.md
example/: joint_level_control_example.cpp  motion_level_control_example.cpp  request_robot_state_example.cpp
include/: bpx_sdk_config.h  bpx_sdk_version.h  joint_level_control.h  motion_level_control.h  motion_types.h  request_robot_state.h  version.h
lib/: libbpx_sdk_aarch64.dylib
scripts/: build_linux_wheels.sh  build_macos_wheels.sh  build_windows_wheels.ps1
testcase/: CMakeLists.txt  motion_level_control_gait_test.cpp
wheelhouse/: bpx_sdk_open-1.0.7-cp310-cp310-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.7-cp310-cp310-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.7-cp310-cp310-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.7-cp310-cp310-win_amd64.whl  bpx_sdk_open-1.0.7-cp311-cp311-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.7-cp311-cp311-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.7-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.7-cp311-cp311-win_amd64.whl  bpx_sdk_open-1.0.7-cp312-cp312-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.7-cp312-cp312-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.7-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.7-cp312-cp312-win_amd64.whl  bpx_sdk_open-1.0.7-cp313-cp313-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.7-cp313-cp313-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.7-cp313-cp313-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.7-cp313-cp313-win_amd64.whl  bpx_sdk_open-1.0.7-cp314-cp314-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.7-cp314-cp314-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.7-cp314-cp314-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.7-cp314-cp314-win_amd64.whl  bpx_sdk_open-1.0.7-cp38-cp38-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.7-cp38-cp38-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.7-cp38-cp38-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.7-cp38-cp38-win_amd64.whl  bpx_sdk_open-1.0.7-cp39-cp39-macosx_11_0_arm64.whl  bpx_sdk_open-1.0.7-cp39-cp39-manylinux_2_24_aarch64.manylinux_2_28_aarch64.whl  bpx_sdk_open-1.0.7-cp39-cp39-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl  bpx_sdk_open-1.0.7-cp39-cp39-win_amd64.whl
